# FedHENet

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  emissions.csv  example.py  example2.py  example_2.py  pyproject.toml  run_experiments.py
conf/: config.yaml  config_cifar100.yaml
configs/: sim_cifar_dirichlet.toml  sim_mnist_iid.toml
examples/: example.py  example_3.py  example_4.py
federated_rolann/: cli.py  config.py  core.py  datasets.py  transport.py
federated_rolann/federated/: client.py  coordinator.py
fedhenet/: __init__.py  __main__.py  cli.py  config.py  core.py  datasets.py  encrypted.py  hydra_cli.py  metrics.py  rolann.py  runner.py  serialization.py  transport.py
fedhenet/algorithms/: base.py  factory.py  fedavg.py  fedhenet.py  fedprox.py
fedhenet/communication/: __init__.py  mqtt.py
fedhenet/crypto/: __init__.py  ckks.py
fedhenet/federated/: client.py  coordinator.py
fedhenet/metrics/: __init__.py  recorder.py
fedhenet/models/: __init__.py  base.py  builder.py  rolann.py
fedhenet/runner/: __init__.py  experiment.py
wandb/: latest-run
wandb/run-20250926_105724-6ehu3exz/: run-6ehu3exz.wandb
wandb/run-20250926_110035-ew0iucyu/: run-ew0iucyu.wandb
wandb/run-20250926_110805-hiwpfppd/: run-hiwpfppd.wandb
wandb/run-20250926_122106-tr85tthu/: run-tr85tthu.wandb
wandb/run-20250926_122943-05uxwspd/: run-05uxwspd.wandb
wandb/run-20250926_123117-sapikzfo/: run-sapikzfo.wandb
wandb/run-20250926_123355-811h2vyh/: run-811h2vyh.wandb
wandb/run-20250926_125503-gm2m16m8/: run-gm2m16m8.wandb
wandb/run-20250926_131540-kpv2lnh0/: run-kpv2lnh0.wandb
(+110 files in other folders)
